# xidl

./: .editorconfig  .envrc  .gitignore  .mise.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .release-please-manifest.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Cross.toml  Makefile  README.md  _config.yml  biome.jsonc  context7.json  justfile  mise.toml  mkdocs.yml  release-please-config.json  skills-lock.json  wget.7z
apis/xidl-api-github/: Cargo.toml
apis/xidl-api-github/api/: github.idl  openapi_github.json
apis/xidl-api-github/src/: lib.rs
xidl-build/: Cargo.toml
xidl-build/src/: lib.rs
xidl-jsonrpc/: Cargo.toml
xidl-jsonrpc/examples/: hello_world_client.rs  hello_world_server.rs
xidl-jsonrpc/examples/rpc/: hello_world.idl  hello_world.rs
xidl-jsonrpc/src/: client.rs  error.rs  lib.rs  line_io.rs  server.rs
xidl-jsonrpc/src/client/: mod.rs  test.rs
xidl-jsonrpc/src/line_io/: mod.rs
xidl-jsonrpc/src/server/: handler.rs  mod.rs  runtime.rs  session.rs
xidl-jsonrpc/src/stream/: mod.rs
xidl-jsonrpc/src/transport/: endpoint.rs  inproc.rs  io.rs  ipc.rs  mod.rs  quic.rs  tcp.rs  tests.rs  tls.rs  tls_config.rs  websocket.rs
xidl-jsonrpc/tests/: serve_on.rs
xidl-parser/: Cargo.toml  tarpaulin.toml
xidl-parser-derive/: Cargo.toml
xidl-parser-derive/src/parser/: gen_struct.rs  gen_variant.rs  mod.rs
xidl-parser/builtin/: restful-security.idl  restful-stream.idl  restful.idl  serialize.idl
xidl-parser/src/: error.rs  lib.rs  parser.rs
xidl-parser/src/hir/: annotation.rs  annotation_builtin.rs  compound.rs  const_dcl.rs  declarator.rs  enum_dcl.rs  exception_dcl.rs  expr.rs  include.rs  interface.rs  mod.rs  pragma.rs  scoped_name.rs  serialization.rs  spec.rs  struct_dcl.rs  type_dcl.rs  types.rs
xidl-parser/src/http_hir/: attr.rs  mod.rs  model.rs  project.rs  project_params.rs  route.rs  semantics.rs  tests.rs  validate.rs
xidl-parser/src/jsonrpc_hir/: attr.rs  mod.rs  model.rs  project.rs  semantics.rs  tests.rs
xidl-parser/src/parser/: doc_comments.rs  mod.rs  normalize.rs
xidl-parser/src/rest_hir/: attr.rs  mapping.rs  mod.rs  model.rs  project.rs  project_params.rs  route.rs  semantics.rs  tests.rs  validate.rs
xidl-parser/src/semantic/: mod.rs  recursive.rs  recursive_graph.rs
xidl-parser/src/typed_ast/: annotation.rs  annotation_builtin.rs  annotation_builtin_parse.rs  base_types.rs  bitmask.rs  exception_dcl.rs  expr.rs  interface.rs  mod.rs  module_dcl.rs  preproc.rs  template_module.rs  typedef_dcl_imp.rs  union.rs
xidl-parser/tests/: test-annotation-template-coverage.rs  test-annotation.rs  test-bitmask.rs  test-bitset.rs  test-const.rs  test-coverage-core.rs  test-coverage-hir.rs  test-coverage-semantic.rs  test-enum.rs  test-except.rs  test-include.rs  test-interface-coverage.rs  test-interface.rs  test-misc.rs  test-module.rs  test-preproc.rs  test-serialize-kind.rs  test-struct.rs  test-template-module.rs  test-typedef.rs  test-union.rs
xidl-parser/tests/snapshots/: test_annotation__hir__annotation_basic.snap  test_annotation__hir__annotation_basic.snap.new  test_annotation__hir__annotation_http_rfc.snap  test_annotation__typed_ast__annotation_basic.snap  test_annotation__typed_ast__annotation_http_rfc.snap  test_bitmask__hir__bitmask_def.snap  test_bitmask__typed_ast__bitmask_def.snap  test_bitset__hir__bitset_def.snap  test_bitset__typed_ast__bitset_def.snap  test_misc__hir__misc.snap  (+43 more)
xidl-rust-axum/: Cargo.toml  README.md
xidl-rust-axum/examples/: axum_hello_world_server.rs  hello_world.idl  hello_world_client.rs  hello_world_server.rs
xidl-rust-axum/src/: client.rs  error.rs  http.rs  lib.rs  request.rs  serde_factory.rs  server.rs  stream.rs
xidl-rust-axum/tests/: coverage_misc.rs  coverage_stream.rs
xidl-typeobject/: Cargo.toml  Makefile
xidl-typeobject/idl/: dds-xtypes_typeobject.idl  dds_xtypes_typeobject.idl
xidl-typeobject/src/: dds_xtypes_typeobject.rs  lib.rs  runtime.rs  typeobject.rs
xidl-typeobject/tests/: xcdr_roundtrip.rs
xidl-xcdr/: Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml
xidl-xcdr/include/: xidl_xcdr.h  xidl_xcdr.hpp
xidl-xcdr/src/: c_api.rs  error.rs  ffi.rs  lib.rs  types.rs
xidlc/: Cargo.toml  build.rs
xidlc-examples/: Cargo.toml  build.rs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
xidlc-examples/api/: city_http.idl  city_http_stream.idl  city_http_stream_openapi.json  city_jsonrpc.idl  city_jsonrpc_stream.idl  city_jsonrpc_stream_openrpc.json  city_openapi.json  city_openrpc.json  openapi.json  openrpc.json
xidlc-examples/examples/: axum_hello_world_client.rs  axum_hello_world_server.rs  city_http_server.rs  city_http_stream.rs  city_jsonrpc_server.rs  city_jsonrpc_stream.rs  city_rest_server.rs  city_rest_stream.rs  hello_world_jsonrpc_client.rs  hello_world_jsonrpc_server.rs  hello_world_server.rs  http_server.rs  jsonrpc_client.rs  jsonrpc_hello_world_client.rs  jsonrpc_hello_world_server.rs  jsonrpc_server.rs  rest_server.rs
xidlc-examples/src/: city_http.rs  city_http_stream.rs  city_jsonrpc.rs  city_jsonrpc_stream.rs  city_rest.rs  city_rest_stream.rs  e2e_test.rs  example_services.rs  http_media_types.rs  http_server.rs  hysteria2.rs  lib.rs  rest_media_types.rs  rest_server.rs  union_serde.rs
xidlc-examples/tests/: city_http.rs  city_http_stream.rs  city_jsonrpc.rs  city_jsonrpc_stream.rs  city_rest.rs  city_rest_stream.rs  e2e_rest.rs  generated_http_docs.rs  generated_rest_docs.rs  hello_world.rs  http_client.rs  http_media_types.rs  http_snapshots.rs  http_stream_client.rs  hysteria2.rs  jsonrpc_client.rs  jsonrpc_stream_client.rs  rest_media_types.rs  rest_snapshots.rs  union_serde_generated.rs  upgrade.rs
xidlc/doc/: idl2c.md  idl2cpp.md  idl2rust-jsonrpc.md  idl2rust.md
xidlc/src/: cli.rs  driver.rs  error.rs  ipc.rs  jsonrpc.rs  lib.rs  macros.rs  main.rs  mem_pipe.rs  openapi.rs  openapi_tests.rs  openapi_tests_basic.inc.rs  openapi_tests_merge.inc.rs  wasm_api.rs
xidlc/tests/: README.md  codegen_snapshot.rs  generated_headers.rs  go_examples.rs  http_validation.rs  rust_render_header.rs
(+1858 files in other folders)
