[workspace]
resolver = "2"
members = [
  "xidl-build",
  "xidlc-examples",
  "xidl-parser-derive",
  "xidl-jsonrpc",
  "xidl-rust-axum",
  "xidlc",
  "xidl-parser",
  "xidl-xcdr",
  "xidl-typeobject",
]

[workspace.dependencies]
xidl-parser = { path = "xidl-parser" }
xidl-parser-derive = { path = "xidl-parser-derive" }
xidl-xcdr = { path = "xidl-xcdr" }
xidl-jsonrpc = { path = "xidl-jsonrpc" }
xidl-rust-axum = { path = "xidl-rust-axum" }
xidl-build = { path = "xidl-build" }

async-trait = "0.1.89"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
