[workspace]
resolver = "2"
members = [
  "xidl-build",
  "xidlc-examples",
  "xidl-parser-derive",
  "xidl-jsonrpc",
  "xidl-rust-axum",
  "xidlc",
  "xidl-parser",
  "xidl-xcdr",
  "xidl-typeobject",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
description = "A IDL codegen."
license = "Apache-2.0"
readme = "./README.md"
keywords = ["omg", "dds", "idl", "http", "jsonrpc"]
categories = ["compilers", "parser-implementations", "network-programming"]
repository = "https://github.com/xidl/xidl"

[profile.release]
strip = true

[workspace.dependencies]
xidl-parser = { version = "0.5.0", path = "xidl-parser" }
xidl-parser-derive = { version = "0.5.0", path = "xidl-parser-derive" }
xidl-xcdr = { version = "0.5.0", path = "xidl-xcdr" }
xidl-jsonrpc = { version = "0.5.0", path = "xidl-jsonrpc" }
xidl-rust-axum = { version = "0.5.0", path = "xidl-rust-axum" }
xidl-build = { version = "0.5.0", path = "xidl-build" }
xidlc = { version = "0.5.0", path = "xidlc" }

async-trait = "0.1.89"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"

[workspace.lints.clippy]
collapsible-if = "allow"
