[workspace]
resolver = "2"
members = [
  "xidl-build",
  "xidlc-examples",
  "xidl-parser-derive",
  "crates/xidl-jsonrpc",
  "crates/xidl-rust-axum",
  "xidlc",
  "xidl-parser",
  "xidl-typeobject",
  "crates/xidl-api-keycloak",
  "crates/xidl-api-discord",
  "crates/xidl-api-reddit",
  "crates/xidl-api-github",
]

[workspace.package]
version = "0.83.1"
edition = "2024"
description = "A IDL codegen."
license = "Apache-2.0"
readme = "./README.md"
keywords = ["omg", "dds", "idl", "http", "jsonrpc"]
categories = ["compilers", "parser-implementations", "network-programming"]
repository = "https://github.com/xidl/xidl"

[profile.release]
strip = true

[workspace.dependencies]
xidl-parser = { version = "0.83.1", path = "xidl-parser" }
xidl-parser-derive = { version = "0.83.1", path = "xidl-parser-derive" }
xidl-jsonrpc = { version = "0.83.1", path = "crates/xidl-jsonrpc" }
xidl-rust-axum = { version = "0.83.1", path = "crates/xidl-rust-axum" }
xidl-build = { version = "0.83.1", path = "xidl-build" }
xidlc = { version = "0.83.1", path = "xidlc" }

async-trait = "0.1.89"
async-stream = "0.3"
clap = "4.5.55"
futures-util = "0.3"
insta = "1.44"
md5 = "0.8.0"
minijinja = "2.19.0"
reqwest = "0.13.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = "1.49.0"
mockall = "0.13.0"
tree-sitter = "=0.25.0"
tree-sitter-idl = "3.18.0"
convert_case = "0.11.0"
tokio-tungstenite = { version = "0.28.0" }

[workspace.lints.clippy]
collapsible-if = "allow"
if_same_then_else = "allow"
single_element_loop = "allow"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
