[package]
name = "xidl-build"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tokio.workspace = true
xidlc = { version = "0.50.1", path = "../xidlc", default-features = false, features = [
  "gen-rust",
  "gen-rust-axum",
  "gen-openapi",
  "gen-openrpc",
] }
