[package]
name = "xidl-build"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = [
  "gen-rust",
  "gen-rust-axum",
  "gen-openapi",
  "gen-openrpc",
  "gen-rust-jsonrpc",
]
gen-rust = ["xidlc/gen-rust"]
gen-rust-jsonrpc = ["gen-rust", "xidlc/gen-rust-jsonrpc"]
gen-rust-axum = ["gen-rust", "xidlc/gen-rust-axum"]
gen-typescript = ["xidlc/gen-typescript"]
gen-typescript-rest = ["gen-typescript", "xidlc/gen-typescript-rest"]
gen-go = ["xidlc/gen-go"]
gen-go-rest = ["gen-go", "xidlc/gen-go-rest"]
gen-openapi = ["xidlc/gen-openapi"]
gen-openrpc = ["xidlc/gen-openrpc"]

[dependencies]
tokio.workspace = true
xidlc = { version = "0.83.0", path = "../xidlc", default-features = false }
