[package]
name = "xidl-jsonrpc"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

tokio = { version = "1.36", optional = true, features = [
  "sync",
  "io-util",
  "rt",
  "time",
] }

[features]
default = ["tokio"]
tokio = ["dep:tokio", "tokio/net"]
tokio-net = ["tokio"]

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
