[package]
name = "xidl-jsonrpc"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dashmap = "6"
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"

tokio = { version = "1.36", optional = true, features = [
  "sync",
  "io-util",
  "rt",
  "time",
] }
s2n-quic = { version = "=1.54.0", optional = true, default-features = false, features = [
  "provider-address-token-default",
  "provider-tls-rustls",
] }

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
tokio-net = ["tokio", "tokio/net"]
quic-s2n = ["tokio-net", "dep:s2n-quic"]

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
