[package]
name = "xidl-jsonrpc"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
async-stream.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dashmap = "6"
futures-core = "0.3"

tokio = { workspace = true, optional = true, features = [
  "sync",
  "io-util",
  "rt",
  "time",
] }
s2n-quic = { version = "=1.54.0", optional = true, default-features = false, features = [
  "provider-address-token-default",
  "provider-tls-rustls",
] }
tokio-tungstenite = { workspace = true, optional = true, features = [
  "connect",
  "handshake",
  "rustls-tls-webpki-roots",
] }
url = { version = "2", optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }

[features]
default = ["tokio"]
tokio = ["dep:tokio"]
transport-all = [
  "transport-ipc",
  "transport-tcp",
  "transport-quic",
  "transport-tls",
  "transport-websocket",
]
transport-ipc = ["transport-tcp"]
transport-tcp = ["tokio", "tokio/net"]
transport-quic = ["transport-tcp", "dep:s2n-quic", "dep:url"]
transport-tls = [
  "transport-tcp",
  "dep:tokio-rustls",
  "dep:rustls",
  "dep:rustls-pemfile",
  "dep:url",
]
transport-websocket = [
  "transport-tcp",
  "transport-tls",
  "dep:tokio-tungstenite",
  "dep:url",
]

[dev-dependencies]
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
xidl-jsonrpc = { workspace = true, features = ["transport-all"] }
