[package]
name = "xidl-parser-derive"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case = "0.8.0"
darling = "0.21.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
tree-sitter-idl = "3.12.1"
