[package]
name = "xidl-parser"
version = "0.2.0"
edition = "2024"

[dependencies]
tree-sitter = "=0.25.0"
tree-sitter-idl = "3.12.1"
xidl-parser-derive = { workspace = true }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7"
minijinja = "1.0"
rust-embed = "8.5"

[dev-dependencies]
insta = "1.44"

[lints.clippy]
collapsible_if = "allow"
