[package]
name = "xidl-parser"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
tree-sitter = "=0.25.0"
tree-sitter-idl = { workspace = true }
xidl-parser-derive = { workspace = true }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md5 = "0.7"
minijinja = "1.0"
rust-embed = "8.5"

[dev-dependencies]
insta = "1.44"

[lints.clippy]
collapsible_if = "allow"
