[package]
name = "xidl-parser"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tree-sitter.workspace = true
tree-sitter-idl.workspace = true
xidl-parser-derive.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
md5.workspace = true
minijinja.workspace = true
include_dir = "0.7"
jiff = "0.2"
convert_case.workspace = true

[dev-dependencies]
insta.workspace = true
