[package]
name = "xidl-rust-axum"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures-util = "0.3"

axum = { version = "0.8", features = ["macros"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["net", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
