[package]
name = "xidl-rust-axum"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures-util.workspace = true
base64 = "0.22"

axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
reqwest = { workspace = true, features = ["json", "stream"], optional = true }
serde_urlencoded = "0.7"
tokio = { workspace = true, features = [
  "net",
  "rt",
  "rt-multi-thread",
  "sync",
] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
tokio-tungstenite = { workspace = true }
rmp-serde = { version = "1", optional = true }

[features]
default = ["client"]
client = ["dep:reqwest"]
msgpack = ["dep:rmp-serde"]
