[package]
name = "xidl-rust-axum"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[features]
default = ["client", "stream"]
client = ["dep:reqwest"]
msgpack = ["dep:rmp-serde"]
stream = ["dep:tokio-tungstenite", "axum/ws"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures-util.workspace = true
base64 = "0.22"

axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
reqwest = { workspace = true, features = ["json", "stream"], optional = true }
serde_urlencoded = "0.7"
serde_plain = "1.0"
tokio = { workspace = true, features = [
  "net",
  "rt",
  "rt-multi-thread",
  "sync",
] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
tokio-tungstenite = { workspace = true, optional = true }
rmp-serde = { version = "1", optional = true }
