[package]
name = "xidl-typeobject"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
xidl-xcdr = { workspace = true }
md5 = "0.7"
