[package]
name = "xidl-typeobject"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
md5.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
