[package]
name = "xidl-xcdr"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[features]
bindgen = ["dep:cbindgen"]

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
paste = "1.0"
bytes = "1.11.0"

[build-dependencies]
cbindgen = { version = "0.28", optional = true }
