[package]
name = "xidlc-examples"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
async-trait.workspace = true
serde.workspace = true
xidl-rust-axum = { workspace = true }
serde_json.workspace = true
xidl-jsonrpc = { workspace = true, features = ["tokio-net"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }

[build-dependencies]
xidl-build = { workspace = true }
