[package]
name = "xidlc-examples"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
async-stream.workspace = true
serde.workspace = true
xidl-rust-axum = { workspace = true, features = ["msgpack"] }
serde_json.workspace = true
xidl-jsonrpc = { workspace = true, features = ["transport-tcp"] }

tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
clap = { workspace = true, features = ["derive"] }

[build-dependencies]
glob = "0.3.3"
xidl-build = { workspace = true }
xidlc = { workspace = true }

[dev-dependencies]
anyhow = "1.0"
minijinja.workspace = true
regex = "1.12.3"
reqwest.workspace = true
similar = "2.7.0"
