[package]
name = "xidlc"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
exclude = ["**/*.snap"]

[[bin]]
name = "xidlc"
path = "src/main.rs"
required-features = ["cli", "fmt"]

[features]
default = []
cli = [
  "dep:clap",
  "dep:tracing-subscriber",
  "dep:tree-sitter-highlight",
  "dep:owo-colors",
  "miette/fancy",
]
fmt = ["fmt-rust", "fmt-cpp", "fmt-typescript"]
fmt-rust = ["tree-sitter-rust"]
fmt-cpp = ["tree-sitter-cpp"]
fmt-typescript = ["tree-sitter-typescript"]

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
xidl-parser.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

xidl-jsonrpc = { version = "0.37.0", path = "../xidl-jsonrpc", default-features = false, features = [
  "tokio",
] }
miette = "7.6.0"
minijinja = { workspace = true, features = ["loader"] }
convert_case = { workspace = true }
clap = { workspace = true, features = ["derive"], optional = true }
include_dir = "0.7"
scopeguard = "1.2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
], optional = true }
itertools = "0.14.0"
tree-sitter.workspace = true
tree-sitter-highlight = { version = "=0.25.0", optional = true }
owo-colors = { version = "4.2", optional = true }
tree-sitter-idl = { workspace = true }
tree-sitter-rust = { version = "=0.23.3", optional = true }
tree-sitter-cpp = { version = "=0.23.4", optional = true }
tree-sitter-typescript = { version = "=0.23.2", optional = true }
md5.workspace = true
indexmap = { version = "2", features = ["serde"] }

semver = "1.0"
jiff = "0.2"
enum_dispatch = "0.3.13"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[test]]
name = "codegen_snapshot"
path = "tests/codegen_snapshot.rs"
required-features = ["fmt"]

[[test]]
name = "go_examples"
path = "tests/go_examples.rs"
required-features = ["fmt"]

[[test]]
name = "http_validation"
path = "tests/http_validation.rs"
required-features = ["fmt"]

[dev-dependencies]
insta = { workspace = true, features = ["json", "redactions"] }
