[package]
name = "xidlc"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
exclude = ["**/*.snap"]

[[bin]]
name = "xidlc"
path = "src/main.rs"
required-features = ["cli", "fmt"]

[features]
default = [
  "gen-rust",
  "gen-rust-jsonrpc",
  "gen-rust-axum",
  "gen-typescript",
  "gen-typescript-rest",
  "gen-go",
  "gen-go-rest",
  "gen-python",
  "gen-python-rest",
  "gen-openapi",
  "gen-openrpc",
]
gen-rust = []
gen-rust-jsonrpc = ["gen-rust"]
gen-rust-axum = ["gen-rust"]
gen-typescript = []
gen-typescript-rest = ["gen-typescript"]
gen-go = []
gen-go-rest = ["gen-go"]
gen-python = []
gen-python-rest = ["gen-python"]
gen-openapi = []
gen-openrpc = []
cli = [
  "dep:clap",
  "dep:tracing-subscriber",
  "dep:tree-sitter-highlight",
  "dep:owo-colors",
  "miette/fancy",
]
fmt = ["fmt-rust", "fmt-typescript"]
fmt-rust = ["dep:syn", "dep:prettyplease"]
fmt-typescript = ["tree-sitter-typescript"]

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
xidl-parser.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

xidl-jsonrpc = { version = "0.80.1", path = "../xidl-jsonrpc", default-features = false, features = [
  "tokio",
] }
miette = "7.6.0"
minijinja = { workspace = true, features = ["loader"] }
convert_case.workspace = true
clap = { workspace = true, features = ["derive"], optional = true }
include_dir = "0.7"
scopeguard = "1.2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
], optional = true }
itertools = "0.14.0"
tree-sitter.workspace = true
tree-sitter-highlight = { version = "=0.25.0", optional = true }
owo-colors = { version = "4.2", optional = true }
tree-sitter-idl.workspace = true
prettyplease = { version = "0.2.37", optional = true }
syn = { version = "2.0.117", optional = true }
tree-sitter-typescript = { version = "=0.23.2", optional = true }
md5.workspace = true
indexmap = { version = "2", features = ["serde"] }

semver = "1.0"
jiff = "0.2"
enum_dispatch = "0.3.13"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[test]]
name = "codegen_snapshot"
path = "tests/codegen_snapshot.rs"
required-features = ["fmt"]

[[test]]
name = "http_validation"
path = "tests/http_validation.rs"
required-features = ["fmt"]

[dev-dependencies]
insta = { workspace = true, features = ["json", "redactions"] }
