[package]
name = "test-rust-rest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
xidl-rust-axum = { path = "{{RUST_XIDL_RUST_AXUM_PATH}}", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
futures-util = "0.3"
